--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,6 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
-    "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "thunk": "^0.0.1",
     "web-vitals": "^2.1.4"
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
